plugins {
    id 'java'
    id 'jacoco'
    id 'application'
}

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:19.0.0'

    testImplementation 'org.mockito:mockito-junit-jupiter:3.2.4'
    testImplementation 'com.spotify:hamcrest-optional:1.1.5'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
}

application {
    mainClassName = 'com.ashraymehta.rockpaperscissors.App'
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        html.enabled = true
    }
}

check.dependsOn(jacocoTestReport)